--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Visionary Entrepreneur | Global Investor</title>
-    <meta name="description" content="Rebuilding standards across industries from the fabric of fashion to the foundations of real estate. A visionary entrepreneur and global investor." />
-    <meta name="author" content="Visionary Entrepreneur" />
+    <title>Mohsin Salya | Visionary Entrepreneur & Global Investor</title>
+    <meta name="description" content="Official website of Mohsin Salya - Rebuilding standards across industries from the fabric of fashion to the foundations of real estate. A visionary entrepreneur and global investor." />
+    <meta name="author" content="Mohsin Salya" />
 
-    <meta property="og:title" content="Visionary Entrepreneur | Global Investor" />
-    <meta property="og:description" content="Rebuilding standards across industries from the fabric of fashion to the foundations of real estate." />
+    <meta property="og:title" content="Mohsin Salya | Visionary Entrepreneur & Global Investor" />
+    <meta property="og:description" content="Official website of Mohsin Salya - Rebuilding standards across industries from the fabric of fashion to the foundations of real estate." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/favicon.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/favicon.png" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
